--- a/Beesiness/Views/Shared/_Layout.cshtml
+++ b/Beesiness/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             <a class="nav-link mx-lg-2" asp-controller="Colmena" asp-action="ColmenaGeneral">Colmenas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" asp-controller="Inspeccion" asp-action="InspeccionGeneral">Inspección</a>
+                            <a class="nav-link mx-lg-2" asp-controller="Tarea" asp-action="TareaGeneral">Tareas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" asp-controller="Enfermedad" asp-action="EnfermedadGeneral">Enfermedades</a>
