--- a/Beesiness/Views/Rol/RolIndex.cshtml
+++ b/Beesiness/Views/Rol/RolIndex.cshtml
@@ -23,7 +23,8 @@
                 <tr>
                     <th>Id</th>
                     <th>Nombre</th>                    
-                    <th>Descripcion</th>                    
+                    <th>Descripcion</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody>
@@ -40,8 +41,25 @@
                             @item.Descripcion
                         </td>
                         <td>
-                            <a asp-action="RolEditar" asp-route-id="@item.Id">Editar</a>
-                            <a onclick="return confirm('¿Eliminar Rol?')" asp-action="RolBorrar" asp-route-id="@item.Id">Borrar</a>                            
+                            <div style="display: flex; align-items: center; gap: 10px;">
+                                <a href="@Url.Action("RolEditar","Rol", new { id = item.Id})"
+                                   class="btn"
+                                   style="background: none; border: none; padding: 0;">
+                                    <i class="fa-solid fa-pen-to-square fa-lg" style="color: #0b5c13;"></i>
+                                </a>
+                            <form asp-controller="Rol"
+                                  asp-action="RolBorrar"
+                                  method="post"
+                                  onsubmit="return confirm('Está seguro de querer eliminar este rol?');"
+                                  style="margin: 0; padding: 0;">
+                              <input type="hidden" name="id" value="@item.Id" />
+                              <button type="submit"
+                                      class="btn"
+                                      style="background: none; border: none; padding: 0;">
+                                  <i class="fa-solid fa-trash fa-lg" style="color: #920a0a;"></i>
+                                    </button>
+                                </form>
+                            </div>
                         </td>
                     </tr>
                 }
