--- a/Beesiness/wwwroot/css/styles.css
+++ b/Beesiness/wwwroot/css/styles.css
@@ -47,8 +47,8 @@ body {
     }
 
     .container button {
-        background-color: #512da8;
-        color: #fff;
+        background-color: #fcc14d;
+        color: #451303;
         font-size: 12px;
         padding: 10px 45px;
         border: 1px solid transparent;
@@ -62,7 +62,7 @@ body {
 
         .container button.hidden {
             background-color: transparent;
-            border-color: #fff;
+            border-color: #fba924;
         }
 
     .container form {
@@ -73,6 +73,7 @@ body {
         flex-direction: column;
         padding: 0 40px;
         height: 100%;
+        color: #451303;
     }
 
     .container input {
@@ -149,8 +150,8 @@ body {
 .toggle {
     background-color: #feedc6;
     height: 100%;
-    background: linear-gradient(to right, #5c6bc0, #512da8);
-    color: #fff;
+    background: linear-gradient(to right, #fdda8a, #fcc14d);
+    color: #782a0f;
     position: relative;
     left: -100%;
     height: 100%;
