--- a/Beesiness/Views/Shared/_Layout.cshtml
+++ b/Beesiness/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         @if (User.IsInRole("Root"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" asp-controller="Usuarios" asp-action="IndexUser">Usuarios</a>
+                                <a class="nav-link mx-lg-2" asp-controller="Staff" asp-action="IndexST">Staff</a>
                             </li>
                         }
                         <li class="nav-item">
