--- a/Beesiness/Views/Status/EstadoSistema.cshtml
+++ b/Beesiness/Views/Status/EstadoSistema.cshtml
@@ -28,6 +28,7 @@
     </div>
 
     <button id="verificarEstadoSistema" class="boton-verificar">Verificar Estado</button>
+    <a asp-controller="Arduino" asp-action="EstadoArduino" class="btn btn-primary">Verificar Arduino</a>
 </div>
 
 @section Scripts {
