--- a/Beesiness/Views/Auth/LoginIn.cshtml
+++ b/Beesiness/Views/Auth/LoginIn.cshtml
@@ -11,11 +11,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/auth.css" />
     <title>Bienvenido a Beesiness</title>
 </head>
 
 <body>
-
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <div id="successModal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <p>@TempData["SuccessMessage"]</p>
+                <button onclick="closeModal()">Cerrar</button>
+            </div>
+        </div>
+    }
     <div class="container" id="container">
         <div class="form-container sign-up">
             <form asp-action="RequestRegistration" method="Post">
@@ -71,8 +81,16 @@
         </div>
     </div>
     <script src="/js/scripts.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            if (document.getElementById('successModal')) {
+                document.getElementById('successModal').style.display = 'block';
+            }
+        });
+
+        function closeModal() {
+            document.getElementById('successModal').style.display = 'none';
+        }
+    </script>
 </body>
-
-
-
 </html>
