--- a/Beesiness/Views/Usuarios/EditUser.cshtml
+++ b/Beesiness/Views/Usuarios/EditUser.cshtml
@@ -26,15 +26,22 @@
         <select asp-for="IdRolSeleccionado" asp-items="Model.RolesDisponibles" class="form-control"></select>
     </div>
     <div class="form-group">
-        <label asp-for="NewPassword">Nueva Contraseña</label>
-        <input asp-for="NewPassword" class="form-control" />
-        <span asp-validation-for="NewPassword" class="text-danger"></span>
+        <input type="checkbox" id="changePasswordCheckbox" onclick="togglePasswordFields();" />
+        <label for="changePasswordCheckbox">¿Deseas cambiar la contraseña?</label>
     </div>
 
-    <div class="form-group">
-        <label asp-for="ConfirmNewPassword">Confirmar Nueva Contraseña</label>
-        <input asp-for="ConfirmNewPassword" class="form-control" />
-        <span asp-validation-for="ConfirmNewPassword" class="text-danger"></span>
+    <div id="passwordFields" style="display:none;">
+        <div class="form-group">
+            <label asp-for="NewPassword">Nueva Contraseña</label>
+            <input asp-for="NewPassword" class="form-control" />
+            <span asp-validation-for="NewPassword" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="ConfirmNewPassword">Confirmar Nueva Contraseña</label>
+            <input asp-for="ConfirmNewPassword" class="form-control" />
+            <span asp-validation-for="ConfirmNewPassword" class="text-danger"></span>
+        </div>
     </div>
     <button type="submit" class="btn btn-primary">Guardar cambios</button>
 </form>
@@ -43,4 +50,13 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+
+    <script>
+        function togglePasswordFields() {
+            var passwordFields = document.getElementById('passwordFields');
+            var isChecked = document.getElementById('changePasswordCheckbox').checked;
+            passwordFields.style.display = isChecked ? 'block' : 'none';
+        }
+    </script>
 }
+
